--- a/js/udemy-js-guia-2018/1-Fundamentos/01-variables/index.html
+++ b/js/udemy-js-guia-2018/1-Fundamentos/01-variables/index.html
@@ -17,6 +17,10 @@
      <h2>var</h2>
      <p>Variable global, <strong>actualmente no es recomendada</strong>, excepto en casos que lo ameriten.</p>
      <h2>let</h2>
-     <p></p>
+     <p>Las variables <code>let</code> son locales, son las mas usadas. <strong>No permiten redeclarar</strong>
+     Usalas siempre que el valor vaya a cambiar</p>
+
+     <h2>const</h2>
+     <p>Son varaibles estaticas, utilizadas cuando el valor no cambia. Ocupan menos espacio de memoria</p>
 </body>
 </html>
