--- a/js/udemy-js-guia-2018/1-Fundamentos/02-strings/index.html
+++ b/js/udemy-js-guia-2018/1-Fundamentos/02-strings/index.html
@@ -9,6 +9,9 @@
           html{
                font-family: Arial, Helvetica, sans-serif;
           }
+          h1{
+               text-align: center;
+          }
      </style>
      <script src="script.js"></script>
 </head>
@@ -21,5 +24,23 @@
 
      <h2>.indexOf()</h2>
      <p>Busca el texto en el string, devuelve la posicion donde inicia</p>
+
+     <h2>.substring()</h2>
+     <p>Muestra la cadena desde los valores dados en el array String</p>
+
+     <h2>.slice()</h2>
+     <p>De atras hacia adelante</p>
+
+     <h2>.split()</h2>
+     <p>Corta porciones de texto, busca lo que ingreses y lo va cortando</p>
+     
+     <h2>Replace()</h2>
+     <p>Busca lo que incluyas y lo reemplaza</p>
+
+     <h2>includes()</h2>
+     <p>Revisa si incluye la cadena y devuelve true o false</p>
+
+     <h2>Repeat(n)</h2>
+     <p>Repite n veces lo que escribes</p>
 </body>
 </html>
