--- a/js/udemy-js-guia-2018/1-Fundamentos/07-objetosYarreglos/index.html
+++ b/js/udemy-js-guia-2018/1-Fundamentos/07-objetosYarreglos/index.html
@@ -16,7 +16,9 @@
 </head>
 <body>
      <h1>Objetos y Arreglos de Objetos</h1>
-     
+     <h2>Objetos ={}</h2>
+     <p>Los objetos se crean con llaves y un indicador <code>clave:'valor',...</code></p>
+     <p>Tambien puede contener funciones</p>
     <!--Script con funciones ejecutadas-->
      <script src="script.js"></script>
 </body>
