Arreglo de objetos
Podemos tener un arreglo [
{llave:'valor'},
{....},
...
]

--- a/js/udemy-js-guia-2018/1-Fundamentos/07-objetosYarreglos/index.html
+++ b/js/udemy-js-guia-2018/1-Fundamentos/07-objetosYarreglos/index.html
@@ -20,6 +20,9 @@
      <p>Los objetos se crean con llaves y un indicador <code>clave:'valor',...</code></p>
      <p>Tambien puede contener funciones</p>
     <!--Script con funciones ejecutadas-->
+
+    <h2>Arreglo de objetos</h2>
+    <p>Podemso tener un arreglo y llenarlo con objetos</p>
      <script src="script.js"></script>
 </body>
 </html>
