--- a/js/udemy-js-guia-2018/1-Fundamentos/14-scope/index.html
+++ b/js/udemy-js-guia-2018/1-Fundamentos/14-scope/index.html
@@ -3,7 +3,7 @@
 <head>
      <meta charset="utf-8" />
      <meta http-equiv="X-UA-Compatible" content="IE=edge">
-     <title>Windows Object</title>
+     <title>Scope</title>
      <meta name="viewport" content="width=device-width, initial-scale=1">
      <style>
           html{
@@ -20,14 +20,13 @@
 </head>
 <body>
 
-     <h1>windows Object</h1>
-     <p>Este objeto contiene mucha informacion del navegador, vamosa ver algunos solamente</p>
+     <h1>Scope</h1>
+     <p>Accesibilidad de los objetos y variables</p>
 
-     <h2>prompt()</h2>
-     <p>Permite que ingreses un texto</p>
+     <p>Las funciones en bloque no reescriben los valores, los usan y el global seguira igual</p>
 
-     <h2>confirm()</h2>
-     <p>Pregunta por algo</p>
+     <p><code>Let y const</code> estan disponibles en los bloques de codigo</p>
+
      <script src="script.js"></script>
 </body> 
 </html>
