--- a/js/udemy-js-guia-2018/2-DOM_Window_Scriping/15-DOM_Scripiting/index.html
+++ b/js/udemy-js-guia-2018/2-DOM_Window_Scriping/15-DOM_Scripiting/index.html
@@ -3,7 +3,7 @@
 <head>
      <meta charset="utf-8" />
      <meta http-equiv="X-UA-Compatible" content="IE=edge">
-     <title>DOM</title>
+     <title>DOM, Windows Y Scriping</title>
      <meta name="viewport" content="width=device-width, initial-scale=1">
      <style>
           html{
@@ -37,6 +37,13 @@
 
      <h3>QuerySelectorAll</h3>
      <p>Permite obtener una lista de resultados</p>
+
+     <h1>Traversing</h1>
+     <p>Permite seleccionar elementos como CSS con curiosidades como por ejemplo: 
+          <ul>
+               <li>Pasar de un hijo a un padre</li>
+          </ul>
+     </p>
      <script src="script.js"></script>
 </body> 
 </html>
