--- a/js/udemy-js-guia-2018/2-DOM_Window_Scriping/15-DOM_Scripiting/index.html
+++ b/js/udemy-js-guia-2018/2-DOM_Window_Scriping/15-DOM_Scripiting/index.html
@@ -44,6 +44,11 @@
                <li>Pasar de un hijo a un padre</li>
           </ul>
      </p>
+
+     <h1>Creando Elementos</h1>
+     <p>Podemos crear elementos con JS y editar todas sus propiedades</p>
+     <h2>Modificando elementos del DOM</h2>
+     <p>Podemos reemplazar etiquetas HTML</p>
      <script src="script.js"></script>
 </body> 
 </html>
