Cositas de seleccion
Seleccionar cositas y agregar eventos

--- a/js/udemy-js-guia-2018/2-DOM_Window_Scriping/15-DOM_Scripiting/index.html
+++ b/js/udemy-js-guia-2018/2-DOM_Window_Scriping/15-DOM_Scripiting/index.html
@@ -16,6 +16,9 @@
                background-color: black;
                color: white;
           }
+          span{
+               color: crimson;
+          }
      </style>
 </head>
 <body>
@@ -46,9 +49,15 @@
      </p>
 
      <h1>Creando Elementos</h1>
+     
      <p>Podemos crear elementos con JS y editar todas sus propiedades</p>
      <h2>Modificando elementos del DOM</h2>
      <p>Podemos reemplazar etiquetas HTML</p>
+
+     <h1>Events Listeners</h1>
+     <p>Para ejecutar eventos segun acciones realziadas en la pagina o por el usuario</p>
+     <h2><span>e</span>.type</h2>
+     <p>Permite conocer el tipo de evento generado</p>
      <script src="script.js"></script>
 </body> 
 </html>
